fix: 인증부분 수정... redis 충돌나는거 오류 고침! 환경변수 분리 추가!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.main.allow-bean-definition-overriding=true
 
-my.domain.name = mo.ija.kro.kr
+my.domain.name = ${DOMAIN_NAME}
 
 server.port=8088
 
@@ -33,6 +33,7 @@ spring.security.user.password=${SECU_PW}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.data.redis.host=${REDIS_URL}
+
 
 email.resource.encode.keyfile = ${EMAIL_ENCODE}
 spring.thymeleaf.check-template-location=true
