feat: 새로운 분산 서버 생성 채팅 관리용. 인증 후 포워딩!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,4 @@ jwt.secret = ${JWT_SECRET}
 
 spring.cloud.openfeign.client.post-url = ${MOIJA_POST_URL}
 spring.cloud.openfeign.client.my-url = ${MOIJA_MY_URL}
+spring.cloud.openfeign.client.chat-url = ${MOIJA_CHAT_URL}
